# cellstore

./: README.md  cellstore.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  TypeClassApproach.hs  TypeFunctions.hs  Types.hs
