name:                cellstore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rubenmoor/cellstore#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Moor
maintainer:          ruben.moor@gmail.com
copyright:           (c) 2016 Ruben Moor
category:            development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , TypeClassApproach
                     , TypeFunctions
  build-depends:       base >= 4.7 && < 5
                     , bson
                     , containers
                     , mongoDB
                     , mtl
                     , text
                     , type-list
                     , TypeCompose
 default-language:     Haskell2010
 ghc-options:          -freduction-depth=401

executable cellstore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , cellstore
                     , mongoDB
                     , mtl
  default-language:    Haskell2010
